# Advent-of-C

./: .gitignore  CMakeLists.txt  CMakePresets.json
day1/: CMakeLists.txt  exercise1.c
day2/: CMakeLists.txt  exercise2.c
day3/: CMakeLists.txt  exercise3.c
day4/: CMakeLists.txt  exercise4.c
day5/: CMakeLists.txt  exercise5.c
